--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         });
         $("#box").mousemove(function(event) {
           $("#output").html(
-            "<div>Mouse Position is X = " +
+            "<div>Mouse Coordinates are X = " +
               event.pageX +
               " Y = " +
               event.pageY +
